Bilde ved siden av tekst vol2

--- a/Documents/P2_designguidelines.html
+++ b/Documents/P2_designguidelines.html
@@ -114,26 +114,31 @@
           <p>
             The moodboard shows an overall look of a possible aesthetic direction for the website.
           </p>
-          <figure class="aside mockup1">
-            <img src="img/mockup1.png" alt="Layout Mockup">
-            <figcaption>Mockup of webpage</figcaption>
-          </figure>
-          <h3>Layout</h3>
-          <p>
-            We want longer, but fewer pages to avoid too many clicks. All pages of our website consist of some common content. This includes the logo of Da Carlo Catering, which will be displayed on the top of every page. Behind the logo will be a photograph, “Main picture” this will be different for every page, but have in common that they work as the background for the whole page, not changing as the user scrolls down the page. On the main page, the main picture will also be a picture carousel. The height of the image will always be the height of the viewport, minus the navbar. The picture will be centered on the page, so that the center of the image is visible on smaller displays.
-          </p>
-          <p>
-            It was important for our client that the website provide clear and easy access to the information about Da Carlo as a company and the services that they provide. We have placed the navigation bar under the main picture to give a clear overview of what this website contains as well as easy access to the different underlying pages.
-          </p>
-          <p>
-            We want to create a wow-factor for Da Carlo’s potential customers, and we think by designing a modern layout with information in boxes that slide over bigger pictures, we will capture the users eyes compared to other catering firms’ websites. Some of the boxes will have a texture to make the information “pop”. Although it is important that the page don’t feel dated, we want to reach out to a broad audience and we want to make the design feel including.
-          </p>
-          <p>
-            Every page will include the navbar, a segment about contact information and a footer. The only exception here is the “Kontakt oss” page where the contact information naturally will take up not just a segment of the page, but the whole page. The fact that contact information is available on all the pages of the site will help fulfill the goal of making contact information easily accessible.
-          </p>
-          <p>
-            The page will be responsive in the way that the navbar should become a hamburger menu when the viewport is less than a smartphone: 344px (or percentage). The boxes will then fill the viewport, however you can still see the main picture in the background as the boxes scroll over it.
-          </p>
+          <div class="full-width">
+            <div class="left">
+              <h3>Layout</h3>
+              <p>
+                We want longer, but fewer pages to avoid too many clicks. All pages of our website consist of some common content. This includes the logo of Da Carlo Catering, which will be displayed on the top of every page. Behind the logo will be a photograph, “Main Picture” this will be different for every page, but have in common that they work as the background for the whole page, not changing as the user scrolls down the page. On the main page, the main picture will also be a picture carousel. The height of the image will always be the height of the viewport, minus the navbar. The picture will be centered on the page, so that the center of the image is visible on smaller displays.
+              </p>
+              <p>
+                It was important for our client that the website provide clear and easy access to the information about Da Carlo as a company and the services that they provide. We have placed the navigation bar under the main picture to give a clear overview of what this website contains as well as easy access to the different underlying pages.
+              </p>
+              <p>
+                We want to create a wow-factor for Da Carlo’s potential customers, and we think by designing a modern layout with information in boxes that slide over bigger pictures, we will capture the users eyes compared to other catering firms’ websites. Some of the boxes will have a texture to make the information “pop”. Although it is important that the page don’t feel dated, we want to reach out to a broad audience and we want to make the design feel including.
+              </p>
+              <p>
+                Every page will include the navbar, a segment about contact information and a footer. The only exception here is the “Kontakt oss” page where the contact information naturally will take up not just a segment of the page, but the whole page. The fact that contact information is available on all the pages of the site will help fulfill the goal of making contact information easily accessible.
+              </p>
+              <p>
+                The page will be responsive in the way that the navbar should become a hamburger menu when the viewport is less than a smartphone: 344px (or percentage). The boxes will then fill the viewport, however you can still see the main picture in the background as the boxes scroll over it.
+              </p>            </div>
+            <div class="right">
+              <figure class="mockup1">
+                <img src="img/mockup1.png" alt="Layout Mockup">
+              </figure>
+            </div>
+          </div>
+          <div>
           <h3>Appearance</h3>
           <p>
             <strong>Font:</strong> Lora for body text and Lato for headers<br>
