byttet ut content med ny content og la til plan

--- a/Documents/P2_designguidelines.html
+++ b/Documents/P2_designguidelines.html
@@ -149,63 +149,222 @@
           </section>
         </div>
       </section>
-      <section id="content">
-        <h2>Content &amp; Structure</h2>
+      <section>
+        <h2>Content</h2>
         <div>
-          <p>
-            Together with the client we have developed a sitemap for the website. The website should be easy to navigate in as the users are not necessarily especially tech interested. The sitemap is divided into two types of content: The core content provides information of Da Carlo's services, while the supporting content addresses the business itself.
-          </p>
-          <figure>
-            <img src="img/sitemap_content_types.png">
-            <figcaption>Proposed sitemap</figcaption>
+		  <p>There will be five separate pages as follows:</p>
+		  <h3>1. <i>Hjem</i> - index.html</h3>
+		  <figure class="figure aside mockup">
+            <img src="img/Webtek_HOME.png">
+            <figcaption>Mockup for index.html</figcaption>
           </figure>
-          <h3>1. Homepage</h3>
           <p>
-            Must inspire customers, make them hungry for savory delicious food. Include pictures of ingredients and food. Communicate Da Carlos passion for food and great experiences. Could it communicate both the catering services and the canteen possibility? With main focus on catering. If possible, it would be nice if the canteen also could have some priority on the homepage.
-          </p>
-          <h3>2. About</h3>
+		  The “Hjem” page will be the first page visitors view when they visit dacarlo.no. It will include a short welcome statement, an introduction about Da Carlo and their passion for food. There will also be introductory information on the catering business and canteen work, here these segments will also link to the respective pages. We will also include a short text about Da Carlo alongside a photograph of the chef. 
+		  </p>
           <p>
-            Short text about Da Carlo as business, what they want to deliver. What the customers should expect from them. This information should be relevant both for catering and the canteen, because the Da Carlo experience will be the same. Emphasize the authenticity and the passion they have for food.
-          </p>
-          <h4>2.1. About the chefs</h4>
-          <p>
-            Introduction of the four chefs with picture and short text to create a feeling of a personal bond between the customers and Da Carlo Catering.
-          </p>
-          <h3>3. Catering</h3>
-          <p>
-            Information on how exactly the delivery will happen, emphasize that the chefs deliver the food and the experience. Communicate that they deliver three-course dinner, finger food, desserts, latin barbeques and specialize in tapas. However they will customize to the customer’s needs and the specific event. If the event requires it, they can also bring professional waiters and bartenders.
-          </p>
-          <h3>4. Menu</h3>
-          <p>
-            Listing of the menu. There might be different packages to choose from, but these are not specified yet.
-          </p>
-          <p>
-            Communicate the different possibilities, but include that customizing is possible.
-          </p>
-          <h3>5. Canteen</h3>
-          <p>
-            Information about the possibility for Da Carlo to work in a canteen. Communicate that the manager has a long experience working and operating a Norwegian canteen for a big company.
-          </p>
-          <p>
-            Pride and joy in making savory food with inspiration from their home countries. It’s tasty and different every day. Will deliver that extra experience.
-          </p>
-          <p>
-            Should include a short reference to earlier work cooperation written by the other company (Nets), because they have been very pleased with the food and how it is operated.
-          </p>
-          <h3>6. Contact information</h3>
-          <p>
-            Should be easily accessible. Because of the personal experience. Just call. Or email. Maybe there could be a form to fill out, but this should be very simple and short, so that the focus is on the personal communication.
-          </p>
+		  This page will reach the goal of inspiring the users and making them hungry by using a background photo of savoury food. It will also, through the intro text, communicate Da Carlos passion for cooking and serving great food. By having short introductions to the other parts of the webpage on the “Hjem” page we also quickly introduce the user to Da Carlo as a company and what services they can provide. 
+		  </p>
+		</div>
+		<div>
+          <h3>2. <i>Catering</i> - catering.html</h3>
+          <figure class="figure aside mockup">
+            <img src="img/Webtek_CATERING.png">
+            <figcaption>Mockup for catering.html</figcaption>
+          </figure>
+		  <p>
+		  The “Catering” page will have general information about da carlos catering business. The text will also explain the possibility to customize the catering experience to the users specific needs. It will also include Da Carlos menus. Each menu will have it’s own description text and information about the different courses, ingredients and allergens. There will also be an option to download menus in PDF-format.
+		  </p>
+		  <p>
+		  The menus will be displayed using a tabbed menu panel. This means that only one menu will be visible at the time and the user can “flip” through the menus using the panel buttons. This will be accomplished using Javascript.
+		  </p>
+		  <p>
+		  Using text and images this page will help fulfill the goals of informing the client about both how the catering experience is delivered and what kind of food and menus Da Carlo Catering can offer. 
+		  </p>
+        </div>
+		<div>
+		  <h3>3. <i>Kantine</i> - Kantine.html</h3>
+          <figure class="figure aside mockup">
+            <img src="img/Webtek_KANTINE.png">
+            <figcaption>Mockup for kantine.html</figcaption>
+          </figure>
+		  <p>
+		  This page will consist of an introductory text about Da Carlos canteen experience and references from their former employers. This will help reach the goal of informing the user that Da Carlo is an experienced and professional canteen operator. 		  
+		  </p>
+		  <p>
+		  It will also include a list of qualities da carlo can provide in their canteen operations. The “Kantine” page will have a reference from their former client Nets at Strømmen, including a picture, and Nets at Nydalen, also including a picture. We also want to include highlighted quotes from both the clients. 		  
+		  </p>
+        </div>
+		<div>
+		  <h3>4. <i>Om</i> - om.html</h3>
+          <figure class="figure aside mockup">
+            <img src="img/Webtek_OM.png">
+            <figcaption>Mockup for om.html</figcaption>
+          </figure>
+		  <p>
+		  The “Om” page will include a short introductory text about Da Carlo and their vision for their cooking, both in terms of their catering business and the canteen operation. It will also include a short introduction about each chef. This will be their name, a few sentences about them and a picture of them. We hope that this introduction of the chefs will give the visitors the feeling that Da Carlo is a warm and personal company that delivers services to match this. At the bottom of the “Om” page we will embed a video from youtube of food being made by the chefs to enhance the feeling of a personal bond between the chefs and the visitor.</p>
+		  </p>
+		</div>
+		<div>
+		  <h3>5. <i>Kontakt oss</i> - kontakt.html</h3>
+          <figure class="figure aside mockup">
+            <img src="img/Webtek_KONTAKT.png">
+            <figcaption>Mockup for kontakt.html</figcaption>
+          </figure>
+		  <p>
+		  This page will have a personal greeting from Da Carlo with their telephonenumber next to it. We hope this greeting will help meet the goal of giving the user a feeling that contacting Da Carlo is a personal and warm experience. The rest of the page will be a form to fill out to get a price estimate from Da Carlo. This form will be dependent on whether the user chooses that they want an estimate for canteen operation or catering.
+		  </p>
+		  <p>
+		  Only one form will be visible at a time, this will be accomplished using tabbed panels and Javascript. The information the user is requested to fill in will validated through the use of Javascript.
+		  </p>
         </div>
       </section>
-      <section id="deployment" class="alt">
-        <h2>Deployment</h2>
-        <div>
-          <p>
-            The website will be called Da Carlo and the domain name will be dacarlo.no. The webhost will be decided later, but the client will cover its cost. After this project ends the site maintenance will be done by Linn Harbo Dahle.
-          </p>
-        </div>
-      </section>
+	  
+	  <section id="plan">
+		<h2>Plan</h2>
+		<div>
+		<p>We will be following the following organizational scheme to create and store our files and the work division table to keep track on who creates what and when.
+		</p>
+		</div>
+		<h4>List of files and folders</h4>
+		<ul>
+			<li>index.html</li>
+			<li>catering.html</li>
+			<li>kantine.html</li>
+			<li>om.html</li>
+			<li>kontakt.html</li>
+			<li>img</li>
+				<ul>
+					<li>background_home1.jpg[…]background_home7.jpg</li>
+					<li>catering_background.jpg</li>
+					<li>kantine_background.jpg</li>
+					<li>om_background.jpg</li>
+					<li>kontakt_background.jpg</li>
+					<li>box_styling</li>
+					<li>signatur.jpg</li>
+					<li>chefs_homepage.jpg</li>
+					<li>logo.jpg</li>
+					<li>canteen_1_reference.jpg</li>
+					<li>canteen_1_logo.jpg</li>
+					<li>canteen_2_reference.jpg</li>
+					<li>canteen_2_logo.jpg</li>
+					<li>download_icon.jpg</li>
+				</ul>
+			<li>modularity/</li>
+				<ul>
+					<li>nav.part</li>
+					<li>footer.part</li>
+				</ul>
+			<li>scripts/</li>
+				<ul>
+					<li>sticky_navbar.js</li>
+					<li>contact_form_validation.js</li>
+					<li>catering_menu_tabbed_panel.js</li>
+					<li>header_image_carousel.js</li>
+				</ul>
+			<li>css/</li>
+				<ul>
+					<li>style.css</li>
+				</ul>
+		</ul>
+		<h4>Work division and deadlines</h4>
+		<table>
+            <tr>
+              <td>Filename</td>
+              <td>Description</td>
+              <td>In charge</td>
+			  <td>Deadline</td>
+            </tr>
+            <tr>
+              <td>Text from client</td>
+              <td>All the text for the website</td>
+              <td>Linn</td>
+			  <td>14.10.16</td>
+            </tr>
+            <tr>
+              <td>template.html</td>
+              <td>A template for the html documents</td>
+              <td>Aurora and Leon</td>
+			  <td>14.10.16</td>
+            </tr>
+			<tr>
+              <td>index.html</td>
+              <td>The homepage. Info about catering, canteen and who they are</td>
+              <td>Kristine</td>
+			  <td>21.10.16</td>
+            </tr>
+			<tr>
+              <td>catering.html</td>
+              <td>Short text about what catering services they provide </br> The menus</td>
+              <td>Linn</td>
+			  <td>21.10.16</td>
+            </tr>
+			<tr>
+              <td>kantine.html</td>
+              <td>Short texts about how they can provide canteen services </br>References from earlier canteen services</td>
+              <td>Kristine</td>
+			  <td>21.10.16</td>
+            </tr>
+			<tr>
+              <td>om.html</td>
+              <td>Intro about the business </br>Information about the chefs, including picture and quote</td>
+              <td>Maia</td>
+			  <td>21.10.16</td>
+            </tr>
+			<tr>
+              <td>kontakt.html</td>
+              <td>Contact information</br>Forms for contacting about canteen and catering</td>
+              <td>Maia</td>
+			  <td>21.10.16</td>
+            </tr>
+			<tr>
+              <td>style.css</td>
+              <td>Styling for all the pages</td>
+              <td>Aurora and Leon</td>
+			  <td>14.10.16</td>
+            </tr>
+			<tr>
+              <td>sticky_navbar.js</td>
+              <td>Sticky header when scrolling</td>
+              <td>Leon</td>
+			  <td>28.10.16</td>
+            </tr>
+			<tr>
+              <td>contact_form_validation.js</td>
+              <td>Contact form with validation on input for both canteen and catering</td>
+              <td>Maia and Kristine</td>
+			  <td>28.10.16</td>
+            </tr>
+			<tr>
+              <td>menu_panel.js</td>
+              <td>A tabbed panel for different catering menus</td>
+              <td>Linn</td>
+			  <td>28.10.16</td>
+            </tr>
+			<tr>
+              <td>header_image_carousel.js</td>
+              <td>A carousel for the homepage showing background images in random order</td>
+              <td>Aurora</td>
+			  <td>28.10.16</td>
+            </tr>
+			<tr>
+              <td>Modularity? part?</td>
+              <td>-</td>
+              <td>-</td>
+            </tr>
+			<tr>
+              <td>Final control</td>
+              <td>Checking the code</td>
+              <td>All</td>
+			  <td>06.11.16</td>
+            </tr>
+			<tr>
+              <td>Testing</td>
+              <td>Undertesting of the site</td>
+              <td>All</td>
+			  <td>10.11.16</td>
+            </tr>
+          </table>
+		</section>
 
     </main>
     <footer>
