Endret goalsoverskrift, la inn modularityendringer

--- a/Documents/P2_designguidelines.html
+++ b/Documents/P2_designguidelines.html
@@ -37,7 +37,7 @@
         </div>
       </section>
       <section id="goals" class="alt">
-        <h2>Goal &amp; Purpose</h2>
+        <h2>Purpose, Goal &amp; Audience</h2>
         <div>
           <p>
             The website’s purpose is to give Da Carlo a presence in the digital world, as part of a marketing strategy to expand their business by increasing the number of sales. Thus, our goal is to inform potential customers of who Da Carlo are, what they can deliver and how to contact them. We also want to help Da Carlo distinguish themselves and assure their audience that they deliver not only great food, but full food experiences. The main audience will be people who demand a little extra luxury on their special event - organizers both of business events and of private parties of different sizes.
@@ -251,8 +251,8 @@
 				</ul>
 			<li>modularity/</li>
 				<ul>
-					<li>nav.part</li>
-					<li>footer.part</li>
+					<li>navbar.html</li>
+					<li>footer.html</li>
 				</ul>
 			<li>scripts/</li>
 				<ul>
@@ -314,6 +314,18 @@
               <td>kontakt.html</td>
               <td>Contact information</br>Forms for contacting about canteen and catering</td>
               <td>Maia</td>
+			  <td>21.10.16</td>
+            </tr>
+			<tr>
+              <td>navbar.html</td>
+              <td>The navigation menu </br>It is on its own html so that it easily can be included in all the sites</td>
+              <td>Leon</td>
+			  <td>21.10.16</td>
+            </tr>
+			<tr>
+              <td>footer.html</td>
+              <td>The footer</br>It is on its own html so that it easily can be included in all the sites</td>
+              <td>Linn</td>
 			  <td>21.10.16</td>
             </tr>
 			<tr>
