--- a/Documents/P2_designguidelines.html
+++ b/Documents/P2_designguidelines.html
@@ -25,7 +25,7 @@
 			<strong>Domain Name:</strong> dacarlo.no <br>
 			<strong>Contact person: </strong>Lene Harbo <br>
 		  </p>
-
+      <h3>Intro from P1</h3>
 		  <p>
 			We will work with Da Carlo catering. They are a small firm located in Oslo providing catering for people. They deliver delicious Mediterranean and South American food. They are also in a search for a bigger company where they could start making a canteen operational.           </p>
           <p>
@@ -78,7 +78,7 @@
           <p>
             Additionally, the content of specific pages links to other related pages. This makes up a local and more content driven level of navigation. For example, the different sections of the home page link to all of the other pages in turn, while both Kantine, Catering and Om Da Carlo logically have a bottom contact banner linking to the contact page.
           </p>
-          <figure class="navigationimage">
+          <figure class="full">
             <img src="img/navigasjonsstruktur.png" alt="Overall Navigation">
           </figure>
         <div>
@@ -156,10 +156,10 @@
             <figcaption>Mockup for index.html</figcaption>
           </figure>
           <p>
-		  The “Hjem” page will be the first page visitors view when they visit dacarlo.no. It will include a short welcome statement, an introduction about Da Carlo and their passion for food. There will also be introductory information on the catering business and canteen work, here these segments will also link to the respective pages. We will also include a short text about Da Carlo alongside a photograph of the chef. 
+		  The “Hjem” page will be the first page visitors view when they visit dacarlo.no. It will include a short welcome statement, an introduction about Da Carlo and their passion for food. There will also be introductory information on the catering business and canteen work, here these segments will also link to the respective pages. We will also include a short text about Da Carlo alongside a photograph of the chef.
 		  </p>
           <p>
-		  This page will reach the goal of inspiring the users and making them hungry by using a background photo of savoury food. It will also, through the intro text, communicate Da Carlos passion for cooking and serving great food. By having short introductions to the other parts of the webpage on the “Hjem” page we also quickly introduce the user to Da Carlo as a company and what services they can provide. 
+		  This page will reach the goal of inspiring the users and making them hungry by using a background photo of savoury food. It will also, through the intro text, communicate Da Carlos passion for cooking and serving great food. By having short introductions to the other parts of the webpage on the “Hjem” page we also quickly introduce the user to Da Carlo as a company and what services they can provide.
 		  </p>
 		</div>
 		<div>
@@ -175,7 +175,7 @@
 		  The menus will be displayed using a tabbed menu panel. This means that only one menu will be visible at the time and the user can “flip” through the menus using the panel buttons. This will be accomplished using Javascript.
 		  </p>
 		  <p>
-		  Using text and images this page will help fulfill the goals of informing the client about both how the catering experience is delivered and what kind of food and menus Da Carlo Catering can offer. 
+		  Using text and images this page will help fulfill the goals of informing the client about both how the catering experience is delivered and what kind of food and menus Da Carlo Catering can offer.
 		  </p>
         </div>
 		<div>
@@ -185,10 +185,10 @@
             <figcaption>Mockup for kantine.html</figcaption>
           </figure>
 		  <p>
-		  This page will consist of an introductory text about Da Carlos canteen experience and references from their former employers. This will help reach the goal of informing the user that Da Carlo is an experienced and professional canteen operator. 		  
+		  This page will consist of an introductory text about Da Carlos canteen experience and references from their former employers. This will help reach the goal of informing the user that Da Carlo is an experienced and professional canteen operator.
 		  </p>
 		  <p>
-		  It will also include a list of qualities da carlo can provide in their canteen operations. The “Kantine” page will have a reference from their former client Nets at Strømmen, including a picture, and Nets at Nydalen, also including a picture. We also want to include highlighted quotes from both the clients. 		  
+		  It will also include a list of qualities da carlo can provide in their canteen operations. The “Kantine” page will have a reference from their former client Nets at Strømmen, including a picture, and Nets at Nydalen, also including a picture. We also want to include highlighted quotes from both the clients.
 		  </p>
         </div>
 		<div>
@@ -215,7 +215,7 @@
 		  </p>
         </div>
       </section>
-	  
+
 	  <section id="plan">
 		<h2>Plan</h2>
 		<div>
