Lagt til minimum requirements

--- a/Documents/P2_designguidelines.html
+++ b/Documents/P2_designguidelines.html
@@ -185,10 +185,10 @@
             <figcaption>Mockup for kantine.html</figcaption>
           </figure>
 		  <p>
-		  This page will consist of an introductory text about Da Carlos canteen experience and references from their former employers. This will help reach the goal of informing the user that Da Carlo is an experienced and professional canteen operator.
+		      This page will consist of an introductory text about Da Carlos canteen experience and references from their former employers. This will help reach the goal of informing the user that Da Carlo is an experienced and professional canteen operator.
 		  </p>
 		  <p>
-		  It will also include a list of qualities da carlo can provide in their canteen operations. The “Kantine” page will have a reference from their former client Nets at Strømmen, including a picture, and Nets at Nydalen, also including a picture. We also want to include highlighted quotes from both the clients.
+		      It will also include a list of qualities da carlo can provide in their canteen operations. The “Kantine” page will have a reference from their former client Nets at Strømmen, including a picture, and Nets at Nydalen, also including a picture. We also want to include highlighted quotes from both the clients.
 		  </p>
         </div>
 		<div>
@@ -198,7 +198,7 @@
             <figcaption>Mockup for om.html</figcaption>
           </figure>
 		  <p>
-		  The “Om” page will include a short introductory text about Da Carlo and their vision for their cooking, both in terms of their catering business and the canteen operation. It will also include a short introduction about each chef. This will be their name, a few sentences about them and a picture of them. We hope that this introduction of the chefs will give the visitors the feeling that Da Carlo is a warm and personal company that delivers services to match this. At the bottom of the “Om” page we will embed a video from youtube of food being made by the chefs to enhance the feeling of a personal bond between the chefs and the visitor.</p>
+		      The “Om” page will include a short introductory text about Da Carlo and their vision for their cooking, both in terms of their catering business and the canteen operation. It will also include a short introduction about each chef. This will be their name, a few sentences about them and a picture of them. We hope that this introduction of the chefs will give the visitors the feeling that Da Carlo is a warm and personal company that delivers services to match this. At the bottom of the “Om” page we will embed a video from youtube of food being made by the chefs to enhance the feeling of a personal bond between the chefs and the visitor.</p>
 		  </p>
 		</div>
 		<div>
@@ -208,22 +208,45 @@
             <figcaption>Mockup for kontakt.html</figcaption>
           </figure>
 		  <p>
-		  This page will have a personal greeting from Da Carlo with their telephonenumber next to it. We hope this greeting will help meet the goal of giving the user a feeling that contacting Da Carlo is a personal and warm experience. The rest of the page will be a form to fill out to get a price estimate from Da Carlo. This form will be dependent on whether the user chooses that they want an estimate for canteen operation or catering.
+		      This page will have a personal greeting from Da Carlo with their telephonenumber next to it. We hope this greeting will help meet the goal of giving the user a feeling that contacting Da Carlo is a personal and warm experience. The rest of the page will be a form to fill out to get a price estimate from Da Carlo. This form will be dependent on whether the user chooses that they want an estimate for canteen operation or catering.
 		  </p>
 		  <p>
-		  Only one form will be visible at a time, this will be accomplished using tabbed panels and Javascript. The information the user is requested to fill in will validated through the use of Javascript.
+		      Only one form will be visible at a time, this will be accomplished using tabbed panels and Javascript. The information the user is requested to fill in will validated through the use of Javascript.
 		  </p>
         </div>
       </section>
 
-	  <section id="plan">
+	  <section id="plan" class="left">
 		<h2>Plan</h2>
-		<div>
-		<p>We will be following the following organizational scheme to create and store our files and the work division table to keep track on who creates what and when.
-		</p>
-		</div>
-		<h4>List of files and folders</h4>
-		<ul>
+      <div>
+		      <p>
+            We will be following the following organizational scheme to create and store our files and the work division table to keep track on who creates what and when.
+		      </p>
+		    <h3> Minimum Requirements</h3>
+          <p>
+            We plan to fulfil the minimum requirements of Javascript applications in this way:
+          </p>
+          <h4>1. Sticky navigation bar </h4>
+          <p>
+          A javascript function that will make the navigation bar stick to the top of the browser window when scrolling down. This way the users have access to the different subpages at any moment.
+          Leon will be in charge of implementing this.
+          </p>
+          <h4>2. Image carousel </h4>
+          <p>
+            A javascript function that makes the background image on the Hjem page change. This way the page will feel more dynamic and we are able to show more than one picture from Da Carlo’s portfolio. Aurora will be in charge of implementing this.
+          </p>
+          <h4>3. Form validation </h4>
+          <p>
+            To make the barrier to contact Da Carlo as small as possible, we want to have a contact form where potential customers can easily contact the company and get a price estimate either for canteen or catering services. Maia and Kristine will be in charge of implementing this.
+          </p>
+          <h4> 4. Tabbed panel for menu and forms </h4>
+          <p>
+            Under “catering” and “kantine” we want to display the different menus that Da Carlo provide through a tabbed panel so that you can click through the menus. Linn will be in charge of implementing this.
+          </p>
+        </div>
+    <div>
+    <h3>List of files and folders</h3>
+		  <ul>
 			<li>index.html</li>
 			<li>catering.html</li>
 			<li>kantine.html</li>
@@ -263,8 +286,10 @@
 					<li>style.css</li>
 				</ul>
 		</ul>
-		<h4>Work division and deadlines</h4>
-		<table>
+    </div>
+    <div>
+		    <h3>Work division and deadlines</h3>
+		      <table>
             <tr>
               <th>Filename</th>
               <th>Description</th>
@@ -368,6 +393,7 @@
 			  <td>10.11.16</td>
             </tr>
           </table>
+        </div>
 		</section>
 
     </main>
