--- a/Documents/P2_designguidelines.html
+++ b/Documents/P2_designguidelines.html
@@ -69,7 +69,7 @@
           </ul>
         </div>
       </section>
-      <section id="navigation" class="alt">
+      <section id="navigation" >
         <h2>Navigation Structure</h2>
         <div>
           <p>
@@ -142,9 +142,6 @@
                 <img src="img/mockup1.png" alt="Layout Mockup">
               </figure>
             </div>
-
-
-
       </section>
       <section>
         <h2>Content</h2>
@@ -215,21 +212,16 @@
 		  </p>
         </div>
       </section>
-
-	  <section id="plan" class="left">
-		<h2>Plan</h2>
-      <div>
-		      <p>
-            We will be following the following organizational scheme to create and store our files and the work division table to keep track on who creates what and when.
-		      </p>
-		    <h3> Minimum Requirements</h3>
+    <section id ="minimum requirements">
+      <h2>Minimum requirements</h2>
+        <div>
           <p>
             We plan to fulfil the minimum requirements of Javascript applications in this way:
           </p>
           <h4>1. Sticky navigation bar </h4>
           <p>
-          A javascript function that will make the navigation bar stick to the top of the browser window when scrolling down. This way the users have access to the different subpages at any moment.
-          Leon will be in charge of implementing this.
+            A javascript function that will make the navigation bar stick to the top of the browser window when scrolling down. This way the users have access to the different subpages at any moment.
+            Leon will be in charge of implementing this.
           </p>
           <h4>2. Image carousel </h4>
           <p>
@@ -241,8 +233,16 @@
           </p>
           <h4> 4. Tabbed panel for menu and forms </h4>
           <p>
-            Under “catering” and “kantine” we want to display the different menus that Da Carlo provide through a tabbed panel so that you can click through the menus. Linn will be in charge of implementing this.
+          Under “catering” and “kantine” we want to display the different menus that Da Carlo provide through a tabbed panel so that you can click through the menus. Linn will be in charge of implementing this.
           </p>
+        </div>
+    </section>
+	  <section id="plan" class="right">
+		<h2>Plan</h2>
+      <div >
+		      <p>
+            We will be following the following organizational scheme to create and store our files and the work division table to keep track on who creates what and when.
+		      </p>
         </div>
     <div>
     <h3>List of files and folders</h3>
@@ -287,8 +287,9 @@
 				</ul>
 		</ul>
     </div>
-    <div>
-		    <h3>Work division and deadlines</h3>
+    <section id="tabel">
+      <div  class="full-width">
+		  <h3>Work division and deadlines </h3>
 		      <table>
             <tr>
               <th>Filename</th>
