justering av paragraf min.req

--- a/Documents/P2_designguidelines.html
+++ b/Documents/P2_designguidelines.html
@@ -212,7 +212,7 @@
 		  </p>
         </div>
       </section>
-    <section id ="minimum requirements">
+    <section id ="minimum requirements" class="alt">
       <h2>Minimum requirements</h2>
         <div>
           <p>
