Added link to the website

--- a/Documents/P3_changes.html
+++ b/Documents/P3_changes.html
@@ -19,12 +19,14 @@
       <section id="client">
         <h2>Administrative Details</h2>
         <div>
-          <p>
-			<strong>Client Name: </strong>Da Carlo Catering <br>
-			<strong>Website Name:</strong> Da Carlo <br>
-			<strong>Domain Name:</strong> dacarlo.no <br>
-			<strong>Contact person: </strong>Lene Harbo <br>
-		  </p>
+          <dl>
+			<dt>Client Name: </dt><dd>Da Carlo Catering</dd>
+			<dt>Website Name:</dt><dd>Da Carlo</dd>
+			<dt>Domain Name:</dt><dd>dacarlo.no</dd>
+		  <dt>Live website:</dt><dd><a href="http://dacarlo.no">dacarlo.no</a></dd>
+			<dt>Contact person:</dt><dd>Lene Harbo</dd>
+		  </dl>
+	      </div>
     </section>
       <section id="brand">
         <h2>Arbeidsfordeling</h2>
