endret litt tekst på changes

--- a/Documents/P3_changes.html
+++ b/Documents/P3_changes.html
@@ -69,13 +69,13 @@
   			      <tr>
                 <td>index.html</td>
                 <td>The homepage. Info about catering, canteen and who they are</td>
-                <td>Siden er kodet i stor grad utifra slik designet på mockupen ser er. Overskriften på to av boksene har blitt endret. “Catering - meny” er endret til “Catering” og “Kantinedrift” er endret til “Kantine”. Dette ble gjort for å gjøre koblingen mellom disse infoboksene og undersidene tydelige. </td>
+                <td>Siden er kodet i stor grad utifra slik designet på mockupen er. Overskriften på to av boksene har blitt endret. “Catering - meny” er endret til “Catering” og “Kantinedrift” er endret til “Kantine”. Dette ble gjort for å gjøre koblingen mellom disse infoboksene og undersidene tydelige. </td>
                 <td>Kristine</td>
               </tr>
   			      <tr>
                 <td>catering.html</td>
                 <td>Short text about what catering services they provide </br> The menus</td>
-                <td>Klienten ønsket to forskjellige typer menyer, en for tapas og en for treretters. Det er laget to deler, en del med 3 forskjellige tapasmenyer og en del med 3 forskjellige treretters. Tapasmenyen er ny og inkluderer spesifikke allergener. Teksten som introduserer hver meny er tatt bort fordi kunden ønsket dette. Det er også lagt til to sitater, basert på kundes ønsker. </td>
+                <td>Teksten som introduserer hver meny er tatt bort fordi kunden ønsket dette. Det er også lagt til to sitater, basert på kundens ønsker. </td>
                 <td>Linn</td>
               </tr>
   			      <tr>
